Fix ticket #1767 by explicitly turning off wrapping for input file options on the jobs tab.

--- a/yabi/yabife/trunk/yabife/static/css/jobs.css
+++ b/yabi/yabife/trunk/yabife/static/css/jobs.css
@@ -243,6 +243,13 @@
     display: none;
 }
 
+.jobParam .value .acceptedExtension {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 290px;
+    white-space: nowrap;
+}
+
 /* Miscellany. */
 .jobParam label {
     position: static;
